-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.958 2011-04-18 19:30:27 remko Exp $
-----------------------------------------------------------------------------------------

2011-04-18	remko
	* grdsample_func.c:	Allow some slack in determining whether -R exceeds grid boundaries.
	* doc/fig/*.ps:		Copied all output of scripts and examples here for use with
				documentation. Remember to update this after changing any scripts
				or examples.

2011-04-17      pwessel
	* minmax_func.c:	Did not properly reset n records after a report.
	* mapproject_func.c:	Did not accept unit c for Cartesian distances.
				Despite -G[]c or -L[]c, continued to treat input x,y as lon,lat
	* grdblend_func.c:	Now accepts -r (to set registration) and will automatically
				call GMT_grdsample to first resample any input grid that has
				another registration or grid spacing than the chosen output grid.
	
2011-04-16      pwessel
	* gmt_map.c:		The GMT_wesn_search did not handle periodic longitudes well,
				now replaced with proper quadrant checking as in minmax.

2011-04-15	pwessel
	* gmt_map.c:		Moved initialization of path resampling step for maps to here.
				This is used by GMT_fix_up_path to resample before plotting.
				Only programs that need to set this via options (e.g., sample1d)
				will do so explicitly.
	* gmt_plot.c:		Safer approach to fill and outline for multi-polygons with holes
				or polar caps: For these cases we always do the fill separately
				then draw the outline separately (if requested).
	* gmntspatial_func.c:	Preliminary implementation of -Ss for splitting polygons that
				straddle the Dateline.

2011-04-14	pwessel
	* *.[ch]:		Ended support for OS/2.  GMT 4 remains an option for OS/2 users.

2011-04-14	jluis
	* gmt_gdalread.c:	Fix situation when reading a subregion via GDAL
	* gmt_customio.c:	---"---

2011-04-14	remko